	* objs/jawbone.cc: Removed unnecessary check.
	* schedule.cc: Fixed bug in patrol schedule.
	* shapes/shape_inf.cc: Fixed bug in copy function and unitialized variables
	  in constructors.
	* shapes/shapevga.cc, shapewrite.cc: The classes Functor_data_reader and
	  Functor_data_writer required too much information they didn't use; this
	  information is now required by the functors they use.

2009-03-10	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed recently-introduced bug in npc_nearby intrinsic.

2009-03-02	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* palette.cc: Prevent accessing palettes that failed to load.

2009-03-01	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actorio.cc: Monsters that can't die are forced to have full hp when
	  the game is loaded.

2009-02-28	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* usecode/*: Unswapped UI_set_oppressor and UI_set_opponent in BG and SI
	  intrinsic tables. Confirmed with some custom usecode and the cheat screen
	  in the original games. Fixed UI_play_music to accept > 356 NPCs.
	  UI_npc_nearby only accepts NPCs, and doesn't report them if they are
	  dead, asleep or paralyzed; UI_npc_nearby2 doesn't seem to be affected by
	  those flags, though. Removed special case for Freedom in UI_move_object,
	  as it no longer seems to be neccessary. In UI_clone, have the cloned
	  NPC be friendly, not the original monster *and* the clone. Added safety
	  clause in UI_set_oppressor preventing the NPC from being his own oppresor;
	  also, the unswap above makes unneccessary for this intrinsic to set a
	  target now. UI_get_timer now returns a random value for uninitialized
	  timers. UI_is_readied and UI_get_readied both use the same spot conversion
	  for BG, and the same spot conversion for SI. Fixed invalid return for
	  UI_get_npc_id when given anything but an NPC.
	* docs/exult_intrinsics.txt: Massive update with format changes.
	* Actors.cc: When an NPC is defeated, others NPCs attacking him will switch